# home-task-smart-homes

./: Cargo.toml  README.md
http-api/: Cargo.toml
http-api/src/: main.rs
smart-homes/: Cargo.toml
smart-homes/src/: cli.rs  error.rs  fan.rs  home.rs  main.rs
src/: bulb.rs  cli.rs  error.rs  fan.rs  lib.rs  main.rs  tv.rs
