[package]
name = "home-task-smart-homes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
paho-mqtt = "0.12.5"
parking_lot = "0.12.3"
rand = "0.8.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_with = { version = "3.11.0", features = ["chrono"] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["macros", "parking_lot", "rt-multi-thread", "time"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"

[profile.release]
lto = true
codegen-units = 1
strip = true
