[package]
name = "smart-homes"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
clap-verbosity-flag.workspace = true
paho-mqtt.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
chrono = "0.4.38"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
parking_lot = "0.12.3"
rand = "0.8.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_with = { version = "3.11.0", features = ["chrono"] }
thiserror = "1.0.65"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
